# bioviz

./: CLAUDE.md  README.md  architecture.md  docker-compose.alt.yml  docker-compose.override.yml  docker-compose.simple.yml  docker-compose.yml  start.sh  test-api.sh
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/schemas/: analysis.py  export.py  file.py  llm.py
backend/app/services/: analysis_service.py  code_execution_service.py  export_service.py  file_service.py  llm_service.py
backend/app/utils/: llm_clients.py
data/sample/: gene_expression.csv  patient_metadata.csv
frontend/: .dockerignore  .eslintrc.cjs  .prettierrc  Dockerfile  Dockerfile.dev  Dockerfile.fixed  Dockerfile.nginx  Dockerfile.production  Dockerfile.simple  README.md  build.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-static/: 404.html  index.html  nginx.conf
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
models/: README.md
ollama/: Dockerfile
project/: README.md  docker-compose.yml
project/backend/: main.py  pyproject.toml
project/backend/api/routes/: analysis.py  files.py  llm.py  visualization.py
project/backend/db/: database.py
project/backend/schemas/: analysis.py  file.py  llm.py  visualization.py
project/backend/services/: analysis_service.py  file_service.py  llm_service.py  visualization_service.py
project/docker/: backend.Dockerfile  frontend.Dockerfile  llm.Dockerfile  llm_server.py
project/frontend/: package.json
(+54 files in other folders)
